src/snapshots/tests__annotated_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Cnf(
    CnfAnnotated {
        name: AtomicWord(
            Lower(
                LowerWord(
                    "test",
                ),
            ),
        ),
        role: Axiom,
        formula: Disjunction(
            Disjunction(
                [
                    Atomic(
                        Defined(
                            Plain(
                                FofDefinedPlainFormula(
                                    Constant(
                                        DefinedConstant(
                                            DefinedFunctor(
                                                AtomicDefinedWord(
                                                    DollarWord(
                                                        LowerWord(
                                                            "true",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
        annotations: Annotations(
            None,
        ),
    },
)
