src/snapshots/tests__annotated_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Thf(
    ThfAnnotated {
        name: AtomicWord(
            Lower(
                LowerWord(
                    "test",
                ),
            ),
        ),
        role: Axiom,
        formula: Logic(
            Unitary(
                Atomic(
                    Defined(
                        Constant(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        annotations: Annotations(
            None,
        ),
    },
)
