src/snapshots/tests__annotations-3.snap
---
source: src/tests.rs
expression: parsed
---
Annotations(
    Some(
        (
            Source(
                Data(
                    Atomic(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
            OptionalInfo(
                None,
            ),
        ),
    ),
)
