src/snapshots/tests__atomic_defiend_word.snap
---
source: src/tests.rs
expression: parsed
---
AtomicDefinedWord(
    DollarWord(
        LowerWord(
            "atomic",
        ),
    ),
)
