src/snapshots/tests__atomic_system_word.snap
---
source: src/tests.rs
expression: parsed
---
AtomicSystemWord(
    DollarDollarWord(
        LowerWord(
            "atomic",
        ),
    ),
)
