src/snapshots/tests__cnf_annotated-2.snap
---
source: src/tests.rs
expression: parsed
---
Cnf(
    LowerWord(
        "test",
    ),
    Axiom,
    CnfFormula(
        [
            Literal(
                Boolean(
                    true,
                ),
            ),
        ],
    ),
    Some(
        Annotations {
            source: Unknown,
        },
    ),
)
