src/snapshots/tests__cnf_annotated.snap
---
source: src/tests.rs
expression: parsed
---
CnfAnnotated {
    name: AtomicWord(
        Lower(
            LowerWord(
                "test",
            ),
        ),
    ),
    role: Axiom,
    formula: Disjunction(
        Disjunction(
            [
                Atomic(
                    Defined(
                        Plain(
                            FofDefinedPlainFormula(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
    annotations: Annotations(
        None,
    ),
}
