src/snapshots/tests__cnf_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Parenthesised(
    Disjunction(
        [
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
