src/snapshots/tests__cnf_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Disjunction(
    Disjunction(
        [
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            NegatedAtomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "q",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
